# monthly_wrapped

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  data_processor.py  db.py  frontend.py  main.py  pyproject.toml  spotify_client.py  sync_data.py
.github/workflows/: sync.yml
