[tool.poetry]
name = "monthly-wrapped"
version = "0.1.0"
description = ""
package-mode = false 
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.129.0,<0.130.0"
uvicorn = ">=0.40.0,<0.41.0"
spotipy = ">=2.25.2,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
streamlit = ">=1.54.0,<2.0.0"
requests = ">=2.32.5,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
